[package]
name = "hiddenwave"
version = "0.2.2"
edition = "2024"
description = "Secure audio steganography and cryptography tool. Hide encrypted files in WAV/MP3."
license = "MIT"
repository = "https://github.com/thehackersbrain/hiddenwave-rs"
readme = "README.md"
keywords = ["steganography", "crypto", "audio", "security", "cli"]
categories = ["command-line-utilities", "cryptography", "multimedia::audio"]

[[bin]]
name = "hiddenwave"
path = "src/main.rs"

[lib]
name = "hiddenwave_lib"
path = "src/lib.rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["getrandom"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
pbkdf2 = "0.12.2"
rand = "0.10.1"
sha2 = "0.10.8"
symphonia = { version = "0.5.5", features = ["mp3"] }
thiserror = "2.0.18"
